--- a/index.html
+++ b/index.html
@@ -24,7 +24,100 @@
     <header>
       <!-- place navbar here -->
     </header>
-    <main></main>
+    <main>
+      <h1>Nhap va luu tru trong mang</h1>
+      <div class="container-lg">
+        <div class="input-group mb-3">
+          <input
+            id="soBatKy"
+            type="text"
+            class="form-control"
+            placeholder="nhap so bat ky"
+            aria-label="Button"
+            aria-describedby=""
+          />
+          <button
+            onclick="luuTruMang()"
+            class="btn btn-outline-secondary"
+            type="button"
+            id=""
+          >
+            Button
+          </button>
+        </div>
+        <div
+          id="ketQua1"
+          class="bg-opacity-75 bg-success m-3 p-3 text-white"
+        ></div>
+        <div
+          id="ketQua2"
+          class="bg-opacity-75 bg-success m-3 p-3 text-white"
+        ></div>
+        <div
+          id="ketQua3"
+          class="bg-opacity-75 bg-success m-3 p-3 text-white"
+        ></div>
+        <div
+          id="ketQua4"
+          class="bg-opacity-75 bg-success m-3 p-3 text-white"
+        ></div>
+        <div
+          id="ketQua5"
+          class="bg-opacity-75 bg-success m-3 p-3 text-white"
+        ></div>
+        <div
+          id="ketQua6"
+          class="bg-opacity-75 bg-success m-3 p-3 text-white"
+        ></div>
+        <div class="doivitri">
+          <input
+            id="vitri1"
+            type="text"
+            class="form-control"
+            placeholder="nhap vi tri muon doi"
+            aria-label="Button"
+            aria-describedby=""
+          />
+          <input
+            id="vitri2"
+            type="text"
+            class="form-control"
+            placeholder="nhap vi tri muon doi"
+            aria-label="Button"
+            aria-describedby=""
+          />
+          <button
+            onclick="doiViTri()"
+            class="btn btn-outline-secondary"
+            type="button"
+            id="doivitri1"
+          >
+            doi vi tri
+          </button>
+          <div
+            id="ketQua7"
+            class="bg-opacity-75 bg-success m-3 p-3 text-white"
+          ></div>
+        </div>
+
+        <div class="sapxep">
+          <div
+            id="ketQua8"
+            class="bg-opacity-75 bg-success m-3 p-3 text-white"
+          ></div>
+          <button onclick="sapXepTangDan()">sap xep</button>
+        </div>
+
+        <div
+          id="ketQua9"
+          class="bg-opacity-75 bg-success m-3 p-3 text-white"
+        ></div>
+        <div
+          id="ketQua10"
+          class="bg-opacity-75 bg-success m-3 p-3 text-white"
+        ></div>
+      </div>
+    </main>
     <footer>
       <!-- place footer here -->
     </footer>
