--- a/index.html
+++ b/index.html
@@ -112,8 +112,34 @@
           id="ketQua9"
           class="bg-opacity-75 bg-success m-3 p-3 text-white"
         ></div>
+        <div class="timSoNguyen">
+          <input
+            id="nhapSoThuc"
+            type="text"
+            class="form-control"
+            placeholder="Nhập Mảng Mới Gồm Số Thực"
+            aria-label="Button"
+            aria-describedby=""
+          />
+          <button
+            onclick="timSoNguyen()"
+            class="btn btn-outline-secondary"
+            type="button"
+            id="btnTimSoNguyen"
+          >
+            tìm số nguyên
+          </button>
+          <div
+            id="inMangSoThuc"
+            class="bg-opacity-75 bg-success m-3 p-3 text-white"
+          ></div>
+          <div
+            id="ketQua10"
+            class="bg-opacity-75 bg-success m-3 p-3 text-white"
+          ></div>
+        </div>
         <div
-          id="ketQua10"
+          id="ketQua11"
           class="bg-opacity-75 bg-success m-3 p-3 text-white"
         ></div>
       </div>
