--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       <!-- place navbar here -->
     </header>
     <main>
-      <h1>Nhap va luu tru trong mang</h1>
+      <h1>Nhập và lưu trữ mảng</h1>
       <div class="container-lg">
         <div class="input-group mb-3">
           <input
             id="soBatKy"
             type="text"
             class="form-control"
-            placeholder="nhap so bat ky"
+            placeholder="Nhập số bất kỳ"
             aria-label="Button"
             aria-describedby=""
           />
@@ -42,7 +42,7 @@
             type="button"
             id=""
           >
-            Button
+            Thêm số
           </button>
         </div>
         <div
@@ -74,7 +74,7 @@
             id="vitri1"
             type="text"
             class="form-control"
-            placeholder="nhap vi tri muon doi"
+            placeholder="Nhập vị trí muốn đổi"
             aria-label="Button"
             aria-describedby=""
           />
@@ -82,7 +82,7 @@
             id="vitri2"
             type="text"
             class="form-control"
-            placeholder="nhap vi tri muon doi"
+            placeholder="Nhập vị trí muốn đổi"
             aria-label="Button"
             aria-describedby=""
           />
@@ -92,7 +92,7 @@
             type="button"
             id="doivitri1"
           >
-            doi vi tri
+            Đổi vị trí
           </button>
           <div
             id="ketQua7"
@@ -105,7 +105,7 @@
             id="ketQua8"
             class="bg-opacity-75 bg-success m-3 p-3 text-white"
           ></div>
-          <button onclick="sapXepTangDan()">sap xep</button>
+          <button onclick="sapXepTangDan()">Sấp xếp</button>
         </div>
 
         <div
